<?xml version="1.0"?>
    <resources>
    <string name="app_name">Math Practice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="instructions">Instructions</string>
    <string name="submit">Submit</string>
    <string name="play_again">New Problem</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="enter_choice">Enter Choice</string>
    <string name="main_message">Welcome to Math Practice! Test your math skills by selecting a subject from the menu.</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
</resources>