<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    tools:context=".AdditionActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:id="@+id/beginner"
        android:onClick="genBeginner"
        android:text="@string/beginner"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:id="@+id/intermediate"
        android:onClick="genIntermediate"
        android:text="@string/intermediate"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:id="@+id/advanced"
        android:onClick="genAdvanced"
        android:text="@string/advanced"/>

</LinearLayout>

    <TextView
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:id="@+id/problem"
        android:gravity="center"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/result_message"
        android:gravity="center"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <LinearLayout
    android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1" android:id="@+id/answer"
        android:hint="@string/enter_answer" android:inputType="number"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/submit_answer"
        android:onClick="submitAnswer"
        android:text="@string/submit"/>

</LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/submit_choice"
        android:onClick="submitChoice"
        android:text="@string/play_again"/>

</LinearLayout>